Resolved merge conflicts 2

--- a/src/componentsuser/userpagestyle.css
+++ b/src/componentsuser/userpagestyle.css
@@ -130,7 +130,11 @@
 }
     .coupons-table {
         width: 300px;
-        display: block;
+
+}
+.orders-table {
+    width: 100%; 
+    padding: 0 !important;
 }
     
 }
