--- a/src/components/video/videostyle.css
+++ b/src/components/video/videostyle.css
@@ -1,7 +1,7 @@
 .video-container {
   position: relative;
   width: 100%;
-  height: 80vh; /* Full viewport height */
+  height: 80vh; 
   overflow: hidden;
   z-index: 0;
 }
@@ -46,3 +46,4 @@
     font-size: 2.5rem;
   }
 }
+
